deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  demo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-deployment
  template:
    metadata:
      labels:
        app: demo-deployment
    spec:
      containers:
      - name: demo-deployment
        image: go_app:latest
        imagePullPolicy: IfNotPresent
        resources:       
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
